fix(portal-sidebar): fix overlay, change spacing

--- a/src/app/layout/components/portal-logo/portal-logo.component.scss
+++ b/src/app/layout/components/portal-logo/portal-logo.component.scss
@@ -6,7 +6,7 @@
 .portal-logo--sidebar {
   width: 100%;
   height: 100%;
-  margin-left: var(--size-2);
+  margin-left: 0.55rem;
 }
 
 .portal-logo__letter {
